Initial commit (Haixiao original version, 2015-12-23)

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,21 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+nohup.out
+*.Rout
+*.RData
+*.aux
+*.cb
+*.cb2
+*.log
+*.synctex.gz
+*.ps
+*.dvi
+*.bbl
+*.blg
+*.out
+*.toc
+*.swp
+.ipynb_checkpoints/
+*.Rhistory
